<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipette_client</name>
  <version>0.0.1</version>
  <description>移液器 UDP 客户端节点 - 使用 mDNS 发现和 UDP 通信控制 COEVOS 移液器</description>
  <maintainer email="djc.bj2012@gmail.com">franco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>rosidl_default_generators</depend>
  
  <!-- Avahi for mDNS (Apple Bonjour compatibility layer) -->
  <build_depend>libavahi-compat-libdnssd-dev</build_depend>
  <exec_depend>libavahi-compat-libdnssd-dev</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
